[project]
name = "langchain-products"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens>=3.0.1",
    "ddgs>=9.10.0",
    "groq>=1.0.0",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.8",
    "langchain-openai>=1.1.7",
    "openai>=2.16.0",
    "pip>=26.0.1",
    "python-dotenv>=1.2.1",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
